--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-  "name": "sendgrid/sendgrid",
+  "name": "godpod/sendgrid",
   "description": "This library allows you to quickly and easily send emails through SendGrid using PHP.",
   "version": "2.2.0",
-  "homepage": "http://github.com/sendgrid/sendgrid-php",
+  "homepage": "http://github.com/godpod/sendgrid-php",
   "license": "MIT",
   "keywords": ["SendGrid", "sendgrid", "email", "send", "grid"],
   "require": {
@@ -14,7 +14,7 @@
     "vlucas/phpdotenv": "1.0.2"
   },
   "replace": {
-    "sendgrid/sendgrid-php": "*"
+    "godpod/sendgrid-php": "*"
   },
   "type": "library",
   "autoload": {
