--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "godpod/sendgrid",
-  "description": "This library allows you to quickly and easily send emails through SendGrid using PHP.",
+  "description": "This library allows you to quickly and easily send emails or make api calls through SendGrid using PHP.",
   "version": "2.2.0",
   "homepage": "http://github.com/godpod/sendgrid-php",
   "license": "MIT",
